Display ActionBar in Settings
Change-Id: I892b449307f1703ea1ff985d1e4956b6b3bd7e81

--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -63,7 +63,8 @@
         <item name="colorPrimaryVariant">@android:color/white</item>
 
         <!-- For slice view in settings -->
-        <item name="sliceViewStyle">@style/Widget.SliceView.Settings</item>
+		<item name="sliceViewStyle">@style/Widget.SliceView.Settings</item>
+		<item name="android:windowNoTitle">false</item>
     </style>
 
     <!-- Variant of the settings theme with no action bar. -->
